<resources>
    <string name="header1">String</string>
    <string name="header2">Target</string>
    <string name="header3">Frequency (Hz)</string>
    <string name="string6">6</string>
    <string name="string5">5</string>
    <string name="string4">4</string>
    <string name="string3">3</string>
    <string name="string2">2</string>
    <string name="string1">1</string>
    <string name="tune16">E</string>
    <string name="tune15">A</string>
    <string name="tune14">D</string>
    <string name="tune13">G</string>
    <string name="tune12">B</string>
    <string name="tune11">e</string>
    <string name="tune26">D</string>
    <string name="tune25">A</string>
    <string name="tune24">D</string>
    <string name="tune23">G</string>
    <string name="tune22">B</string>
    <string name="tune21">e</string>
    <string name="tune36">D</string>
    <string name="tune35">G</string>
    <string name="tune34">D</string>
    <string name="tune33">G</string>
    <string name="tune32">B</string>
    <string name="tune31">d</string>
    <string name="empty">-</string>
    <string name="out">Not In Tune</string>
    <string name="in">In Tune</string>
    <string name="ee">Major: Electrical Engineering</string>
    <string name="cpe">Major: Computer Engineering</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="ryan">Ryan Barker</string>
    <string name="michael">Michael Norcia</string>
    <string name="duke">Duke Durot</string>
    <string name="jules">Jules Ebaa</string>
    <string name="shane">Shane Ma</string>
    <string name="welcome">Select an Option:</string>
    <string name="app_name">GA-5 AutoTuner</string>
    <string name="tuning1">Tune to Standard</string>
    <string name="tuning2">Tune to Drop D</string>
    <string name="tuning3">Tune to Open G</string>
    <string name="team">Meet the Team</string>
    <string name="space"> </string>
    <string name="author">Developed by Ryan Barker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tuning_one">Standard Tuning Selected</string>
    <string name="title_activity_tuning_two">Drop D Tuning Selected</string>
    <string name="title_activity_tuning_three">Open G Tuning Selected</string>
    <string name="title_activity_ryan">Software Design</string>
    <string name="title_activity_duke">Motor Control Design</string>
    <string name="title_activity_michael">Amplification and Mechanical Design</string>
    <string name="title_activity_jules">Microcontroller Design</string>
    <string name="title_activity_shane">Power System Design</string>
</resources>
